Fix footer z-index bug

--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -2,9 +2,11 @@
 
 .footer {
   position: fixed;
+  z-index: 2;
   bottom: 0;
   left: 0;
   width: 100%;
   height: 3rem;
+  background-color: #fff;
   border-top: solid $color-muted 0.1rem;
 }
